--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "react-hotel-calendar",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "A React availability calendar for hotels",
+  "author": "labsbh",
+  "license": "MIT",
+  "repository": "labsbh/react-hotel-calendar",
+  "main": "./build/index.js",
+  "module": "./build/index.es.js",
+  "types": "./build/index.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,19 +20,42 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-essentials": "^8.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "tsc -p tsconfig.json && rollup -c",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "lint": "eslint . --ext .ts --ext .tsx --fix"
+  },
+  "peerDependencies": {
+    "clsx": "^1.1.1",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.23.0",
+    "i18next": "^20.5.0",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
+    "styled-components": "^5.3.1"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -39,5 +69,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/node-logger": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^6.3.8",
+    "@types/lodash": "^4.14.175",
+    "@types/styled-components": "^5.1.14",
+    "clsx": "^1.1.1",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.24.0",
+    "i18next": "^21.2.0",
+    "lodash": "^4.17.21",
+    "react-i18next": "^11.12.0",
+    "rollup": "^2.57.0",
+    "rollup-plugin-dts": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "styled-components": "^5.3.1",
+    "tslib": "^2.3.1"
   }
 }
