--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "build/dts",
+    "outDir": "build",
     "target": "es5",
     "lib": [
       "dom",
@@ -17,10 +20,21 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "emitDeclarationOnly": true,
+    "noEmit": false,
+    "jsx": "react-jsx",
   },
   "include": [
-    "src"
-  ]
+    "./src",
+    "./src/translations/*.json"
+  ],
+  "exclude": [
+    "node_modules",
+    "build",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.stories.tsx",
+    "./src/setupTests.ts"
+  ],
+  "files": ["src/index.ts"]
 }
