--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "rooks": "^5.7.1"
   },
   "eslintConfig": {
     "extends": [
@@ -94,6 +95,7 @@
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "styled-components": "^5.3.1",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "rooks": "^5.7.1"
   }
 }
