:globe_with_meridians: Remove i18next

--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.23.0",
-    "i18next": "^20.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.11.4",
-    "styled-components": "^5.3.1",
-    "rooks": "^5.7.1"
+    "rooks": "^5.7.1",
+    "styled-components": "^5.3.1"
   },
   "eslintConfig": {
     "extends": [
@@ -88,14 +86,12 @@
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.24.0",
-    "i18next": "^21.2.0",
     "lodash": "^4.17.21",
-    "react-i18next": "^11.12.0",
     "rollup": "^2.57.0",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rooks": "^5.7.1",
     "styled-components": "^5.3.1",
-    "tslib": "^2.3.1",
-    "rooks": "^5.7.1"
+    "tslib": "^2.3.1"
   }
 }
