:construction_worker: Add publish github action

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "A React availability calendar for hotels",
   "author": "labsbh",
   "license": "MIT",
-  "repository": "labsbh/react-hotel-calendar",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/labsbh/react-hotel-calendar.git"
+  },
   "main": "./build/index.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
@@ -93,5 +96,9 @@
     "rooks": "^5.7.1",
     "styled-components": "^5.3.1",
     "tslib": "^2.3.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/labsbh/react-hotel-calendar/issues"
+  },
+  "homepage": "https://github.com/labsbh/react-hotel-calendar#readme"
 }
